<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.delilaqar.realestate.ui.HomeFragment"
        android:label="@string/nav_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/searchFragment"
        android:name="com.delilaqar.realestate.ui.SearchFragment"
        android:label="@string/nav_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/postAdFragment"
        android:name="com.delilaqar.realestate.ui.PostAdFragment"
        android:label="@string/nav_post_ad"
        tools:layout="@layout/fragment_post_ad" />

    <fragment
        android:id="@+id/favoritesFragment"
        android:name="com.delilaqar.realestate.ui.FavoritesFragment"
        android:label="@string/nav_favorites"
        tools:layout="@layout/fragment_favorites" />

    <fragment
        android:id="@+id/profileFragment"
        android:name="com.delilaqar.realestate.ui.ProfileFragment"
        android:label="@string/nav_profile"
        tools:layout="@layout/fragment_profile" />

</navigation>
